// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Placeholder renders a large placeholder 1`] = `
<style>
{
  "S1": {
    "height": "300px",
    "width": "970px",
  },
}
</style>

<div>
  <div
    className="S1"
  >
    <div>
      watermark
    </div>
    <div
      dir="auto"
    >
      ADVERTISEMENT
    </div>
  </div>
</div>
`;

exports[`Placeholder renders a medium placeholder 1`] = `
<style>
{
  "S1": {
    "height": "300px",
    "width": "728px",
  },
}
</style>

<div>
  <div
    className="S1"
  >
    <div>
      watermark
    </div>
    <div
      dir="auto"
    >
      ADVERTISEMENT
    </div>
  </div>
</div>
`;

exports[`Placeholder renders a small placeholder 1`] = `
<style>
{
  "S1": {
    "height": "300px",
    "width": "300px",
  },
}
</style>

<div>
  <div
    className="S1"
  >
    <div>
      watermark
    </div>
    <div
      dir="auto"
    >
      ADVERTISEMENT
    </div>
  </div>
</div>
`;

exports[`Placeholder renders a tiny placeholder 1`] = `
<style>
{
  "S1": {
    "height": "100px",
    "width": "100px",
  },
}
</style>

<div>
  <div
    className="S1"
  >
    <div>
      watermark
    </div>
    <div
      dir="auto"
    >
      ADVERTISEMENT
    </div>
  </div>
</div>
`;
